waveformsink: Fix Memory leak using GST_PTR_FORMAT

https://bugzilla.gnome.org/show_bug.cgi?id=772497